cmake_minimum_required(VERSION 2.8)
PROJECT(Venus)
macro(source_group_by_dir source_files)
    if(MSVC)
        set(sgbd_cur_dir ${CMAKE_CURRENT_SOURCE_DIR})
        foreach(sgbd_file ${${source_files}})
            string(REGEX REPLACE ${sgbd_cur_dir}/\(.*\) \\1 sgbd_fpath ${sgbd_file})
            string(REGEX REPLACE "\(.*\)/.*" \\1 sgbd_group_name ${sgbd_fpath})
            string(COMPARE EQUAL ${sgbd_fpath} ${sgbd_group_name} sgbd_nogroup)
            string(REPLACE "/" "\\" sgbd_group_name ${sgbd_group_name})
            if(sgbd_nogroup)
                set(sgbd_group_name "\\")
            endif(sgbd_nogroup)
            source_group(${sgbd_group_name} FILES ${sgbd_file})
        endforeach(sgbd_file)
    endif(MSVC)
endmacro(source_group_by_dir)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include/Graphics)
LINK_DIRECTORIES({PROJECT_BINARY_DIR}/binary/lib/debug)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/binary/bin)



SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

ADD_SUBDIRECTORY(src)

ADD_EXECUTABLE(test main.cpp)

target_link_libraries(test DX9)


