cmake_minimum_required(VERSION 2.8)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include/Graphics)

MESSAGE(STATUS ${PROJECT_BINARY_DIR})
MESSAGE(STATUS ${PROJECT_SOURCE_DIR})


ADD_SUBDIRECTORY(DX11 DX11)

FILE(GLOB_RECURSE SOURCE_1 *.cpp)
FILE(GLOB_RECURSE SOURCE_2 *.h)

set(all_files ${SOURCE_1} ${SOURCE_2})

source_group_by_dir(all_files)


FILE(GLOB_RECURSE SOURCE_DX11 ./DX11/*.cpp)
FILE(GLOB_RECURSE HEADER_DX11 ./DX11/*.h)

FILE(GLOB_RECURSE SOURCE_OGL ./OGL/*.cpp)
FILE(GLOB_RECURSE HEADER_OGL ./OGL/*.h)

ADD_LIBRARY(DX11 STATIC ${SOURCE_DX11} ${HEADER_DX11})

ADD_LIBRARY(OGL STATIC ${HEADER_OGL} ${SOURCE_OGL})


SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/binary/lib)
#SET_PROPERTY(TARGET DX11 PROPERTY FOLDER "Graphics")