cmake_minimum_required(VERSION 2.8)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include/Graphics)

MESSAGE(STATUS ${PROJECT_BINARY_DIR})
MESSAGE(STATUS ${PROJECT_SOURCE_DIR})


FILE(GLOB_RECURSE SOURCE_1 *.cpp)
FILE(GLOB_RECURSE SOURCE_2 *.h)

set(all_files ${SOURCE_1} ${SOURCE_2})

source_group_by_dir(all_files)


if(WIN32)
ADD_SUBDIRECTORY(DX11 DX11)
endif()
ADD_SUBDIRECTORY(OGL OGL)
ADD_SUBDIRECTORY(Common Common)