cmake_minimum_required(VERSION 2.8)
ADD_SUBDIRECTORY(Image Image)

INCLUDE_DIRECTORIES(${VenusInc}/Resource)
INCLUDE_DIRECTORIES(${VenusInc}/Utility)

FILE(GLOB_RECURSE FILE_SOURCE ./*.cpp)
FILE(GLOB_RECURSE FILE_HEADER ./*.h)
FILE(GLOB_RECURSE RESOURCE_HEADER ${VenusInc}/Resource/*.h)

set(all_files ${FILE_SOURCE} ${FILE_HEADER} ${RESOURCE_HEADER})
source_group_by_dir(sources)

ADD_LIBRARY(Resource STATIC ${FILE_SOURCE} ${FILE_HEADER} ${RESOURCE_HEADER})