cmake_minimum_required(VERSION 2.8)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include/Utility)


ADD_SUBDIRECTORY(File File)
ADD_SUBDIRECTORY(Memory Memory)

FILE(GLOB_RECURSE MAC_FILE_SOURCE ./File/Mac/*.cpp)
FILE(GLOB_RECURSE MAC_FILE_HEADER ./File/Mac/*.h)

FILE(GLOB_RECURSE WIN_FILE_SOURCE ./File/WIN/*.cpp)
FILE(GLOB_RECURSE WIN_FILE_HEADER ./File/WIN/*.h)

FILE(GLOB_RECURSE MAC_MEMORY_SOURCE ./Memory/Mac/*.cpp)
FILE(GLOB_RECURSE MAC_MEMORY_HEADER ./Memory/Mac/*.h)

FILE(GLOB_RECURSE WIN_MEMORY_SOURCE ./Memory/WIN/*.cpp)
FILE(GLOB_RECURSE WIN_MEMORY_HEADER ./Memory/WIN/*.h)

FILE(GLOB_RECURSE SOURCE_1 *.cpp)
FILE(GLOB_RECURSE SOURCE_2 *.h)

set(all_files ${SOURCE_1} ${SOURCE_2})
source_group_by_dir(all_files)

IF(APPLE)
 ADD_LIBRARY(Utility STATIC ${MAC_FILE_SOURCE} ${MAC_MEMORY_SOURCE} )
 ELSEIF(WIN32)
  ADD_LIBRARY(Utility STATIC ${WIN_FILE_SOURCE} ${WIN_MEMORY_SOURCE} )
endif()